fix(options): increase ant modal mask z-index

--- a/src/options/_style.scss
+++ b/src/options/_style.scss
@@ -35,6 +35,7 @@ body {
 }
 
 .ant-tooltip,
+.ant-modal-mask,
 .ant-modal-wrap {
   z-index: 2147483647 !important;
 }
